# LArSIMple

./: .gitignore  CMakeLists.txt  LArSIMple.cc  LICENSE  README.md  setup.sh
cmake/: PandoraSources.cmake  Sources.cmake
config/: PandoraSettings.xml  default_config.mac  geometry.mac  neutrino.mac  neutrino_from_tree.mac  neutrino_genie.mac  neutrino_gibuu.mac  neutrino_nuwro.mac  particle_bomb.mac  pion_gun_1GeV.mac  positron_gun_1GeV.mac  proton_gun_1GeV.mac
config/particleGuns/: antiproton_gun_1GeV.mac  pion_gun_1GeV.mac  positron_gun_1GeV.mac  proton_gun_1GeV.mac
include/: LArSIMple3DEnergyDeposit.hh  LArSIMpleDetectorConstruction.hh  LArSIMpleDetectorMessenger.hh  LArSIMpleEventAction.hh  LArSIMpleHitFeatureUtils.hh  LArSIMpleMessenger.hh  LArSIMpleNestedParameterisation.hh  LArSIMpleNeutrinoInputParser.hh  LArSIMpleOutputWriter.hh  LArSIMplePandoraContent.hh  LArSIMplePandoraInterface.hh  LArSIMplePandoraMessenger.hh  LArSIMplePandoraWriter.hh  LArSIMplePhysicsList.hh  LArSIMplePrimaryGeneratorAction.hh  LArSIMplePrimaryGeneratorMessenger.hh  LArSIMpleProcessTable.hh  LArSIMpleRunAction.hh  LArSIMpleSteppingAction.hh  LArSIMpleTrackData.hh  LArSIMpleTrackingAction.hh  LArSIMpleTrueNeutrinoEvent.hh  LArSIMpleTrueParticle.hh  LArSIMpleTruthFolder.hh  LArSIMpleWireConvertor.hh  LArSIMpleWireHit.hh
src/: LArSIMple3DEnergyDeposit.cc  LArSIMpleDetectorConstruction.cc  LArSIMpleDetectorMessenger.cc  LArSIMpleEventAction.cc  LArSIMpleHitFeatureUtils.cc  LArSIMpleMessenger.cc  LArSIMpleNestedParameterisation.cc  LArSIMpleNeutrinoInputParser.cc  LArSIMpleOutputWriter.cc  LArSIMplePandoraContent.cc  LArSIMplePandoraInterface.cc  LArSIMplePandoraMessenger.cc  LArSIMplePandoraWriter.cc  LArSIMplePhysicsList.cc  LArSIMplePrimaryGeneratorAction.cc  LArSIMplePrimaryGeneratorMessenger.cc  LArSIMpleProcessTable.cc  LArSIMpleRunAction.cc  LArSIMpleSteppingAction.cc  LArSIMpleTrackData.cc  LArSIMpleTrackingAction.cc  LArSIMpleTrueNeutrinoEvent.cc  LArSIMpleTrueParticle.cc  LArSIMpleTruthFolder.cc  LArSIMpleWireConvertor.cc  LArSIMpleWireHit.cc
